Mon Jan  7 23:43:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (rmpd_power_by_big_decimal):
	  add RB_GC_GUARD to prevent the intermediate object is GCed too early.
	  This patch was made by Yusuke Endoh.  [Bug #7044] [ruby-core:47632]

	* test/bigdecimal/test_bigdecimal.rb: add a reproduction test for
	  the issue [Bug #7044]

Mon Jan  7 21:40:36 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_method.c (Init_eval_method): main.public and main.private
	  should be private.

	* proc.c (Init_Proc): main.define_method should be private.

	* test/ruby/test_module.rb: related test.

Mon Jan  7 20:48:47 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (Init_eval): main.include should be private.
	  [ruby-core:51293] [Bug #7670]

	* test/ruby/test_module.rb (test_top_include_is_private): a new test
	  for the above change.

Mon Jan  7 20:29:50 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: remove description about `require "refinement"'.

Mon Jan  7 20:15:49 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (Init_eval): enable Refinements by default.
	  [ruby-core:51286] [Bug #7667]

	* eval.c (rb_mod_refine, top_using): show a warning when
	  Module#refine or main.using is called at the first time.

	* ext/refinement/*: removed the extension library "refinement".

	* test/ruby/test_refinement.rb: fix for the above changes.

Mon Jan  7 17:34:22 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h (RUBY_EVENT_SPECIFIED_LINE): make it special.
	  This flag is not contained by RUBY_EVENT_TRACEPOINT_ALL.
	  This event is experimental one. It is possible to remove/rename
	  flag name after 2.0.1.

	* vm_trace.c (get_event_id): return :line if SPECIFIED_LINE was
	  occurred. `:specified_line' never been returned.

Mon Jan  7 15:42:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_kwrest): allow bare kwrest_mark as valid syntax.  its
	  semantics is still undefined.  [Bug #7662] [ruby-core:51269]
